--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,47 @@ a {
 /* ------------------------ *\
     Layout
 \* ------------------------ */
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  border: solid 1px #333;
+}
 
+.row {
+  border: solid 1px blue;
+  /* 抵銷 column 最外側的padding寬度，讓 column 內容可以滿版 */
+  margin-left: -16px;
+  margin-right: -16px;
+}
+
+.row:after{
+  content: '';
+  display: block;
+  /* 清除 float 的雙向浮動 */
+  clear: both;
+}
+
+.col-1-2, .col-1-3, .col-1-4 {
+  border: solid 1px red;
+  float: left;
+  height: 300px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.col-1-2{
+  width: 50%
+}
+
+.col-1-3{
+  width: 33.333333%
+}
+
+.col-1-4{
+  width: 25%
+}
 
 /* ------------------------ *\
     Component
