--- a/css/style.css
+++ b/css/style.css
@@ -418,3 +418,44 @@ a {
   font-size: 14px;
   color: #d5a26f;
 }
+
+/* contact-info */
+.contact-info {
+  padding-top: 40px;
+}
+
+.contact-info .info-item {
+  margin-bottom: 24px;
+}
+
+.contact-info .info-item .title {
+  color: #d5a26f;
+  line-height: 36px;
+  margin-bottom: 16px;
+}
+
+.contact-info .info-item .title span {
+  border-bottom: 2px solid #d5a26f;
+  display: inline-block;
+}
+
+.contact-info .info-item .info {
+  line-height: 32px;
+  color: #333;
+}
+
+/* map-container */
+.map-container {
+  width: 100%;
+  padding-top: 75%;
+  border: solid 1px #333;
+}
+
+.map-container iframe {
+  position: absolute;
+  left: 0;
+  top: 0;
+  /* 在 CSS 給寬高，或是直接在 iframe標籤內給也可以 */
+  /* width: 100%;
+  height: 100%; */
+}
