--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,11 @@ a {
   margin: 0 auto;
   padding-left: 16px;
   padding-right: 16px;
-  border: solid 1px #333;
+  /* border: solid 1px #efefef; */
 }
 
 .row {
-  border: solid 1px blue;
+  /* border: solid 1px blue; */
   /* 抵銷 column 最外側的padding寬度，讓 column 內容可以滿版 */
   margin-left: -16px;
   margin-right: -16px;
@@ -69,7 +69,7 @@ a {
 }
 
 .col-1-2, .col-1-3, .col-1-4 {
-  border: solid 1px red;
+  /* border: solid 1px red; */
   float: left;
   padding-left: 16px;
   padding-right: 16px;
@@ -144,7 +144,7 @@ a {
 /* image-container */
 .image-container {
   width: 100%;
-  border: solid 1px #333;
+  /* border: solid 1px #333; */
 }
 
 .image-container::before{
@@ -182,7 +182,7 @@ a {
 .hero{
   padding-top: 200px;
   padding-bottom: 200px;
-  border: solid 1px #000;
+  /* border: solid 1px #000; */
 }
 
 .hero.hero-bg-white {
@@ -198,6 +198,11 @@ a {
   /* border: solid 1px #000; */
   height: 64px;
   background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  z-index: 500;
+  width: 100%;
+  left: 0;
+  top: 0;
 }
 
 .navbar .brand {
@@ -448,7 +453,7 @@ a {
 .map-container {
   width: 100%;
   padding-top: 75%;
-  border: solid 1px #333;
+  /* border: solid 1px #333; */
 }
 
 .map-container iframe {
@@ -458,4 +463,52 @@ a {
   /* 在 CSS 給寬高，或是直接在 iframe標籤內給也可以 */
   /* width: 100%;
   height: 100%; */
+}
+
+/* footer */
+.footer {
+  background-image: url('/images/bg/bg003.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.footer .brand {
+  display: block;
+  width: 240px;
+  height: 240px;
+  margin: 0 auto;
+  background-image: url('/images/common/logo-w.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.footer .nav {
+  /* border: 1px solid #fff; */
+  display: flex;
+  justify-content: center;
+}
+
+.footer .nav .nav-link {
+  /* border: 1px solid #fff; */
+  color: #fefefe;
+  display: block;
+  padding: 24px;
+  line-height: 24px;
+  transition: all 0.3s;
+}
+
+.footer .nav .nav-link:hover {
+  color: #d5a26f;
+}
+
+.footer .copyright {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #ccc;
+  text-align: center;
+  line-height: 24px;
+  padding: 16px 0;
+  font-size: 14px;
 }
